Corrected style overlap on buttons.

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2{
     font-weight: bolder;
 }
 
-button {
+.button_box > button {
     border-color: #F9FAF8;
     border-style: solid;
     border-width: 2px;
